﻿2007-07-24  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/CMakeLists.txt, src/Makefile.am: Added setup_keyboard.* and
	keyboardconfig.* to the list of source files.
	* src/keyboardconfig.h: Fixed initialization order.

2007-07-17  Joshua Langley  <joshlangley[at]optusnet.com.au>

	* src/game.cpp: Only one key per function.
	* src/main.cpp: Keyboard configuration included.
	* src/gui/button.cpp, src/gui/button.h: Default constructor and
	init function added.
	* src/gui/setup.cpp: Keyboard setup tab added.
	* src/gui/setup_keyboard.cpp, src/gui/setup_keyboard.h:
	Add to project file, it is the keyboard setup tab.
	* src/keyboardconfig.cpp, src/keyboardconfig.h: Add to project file,
	the main keyboard config operations.

2007-07-16  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* tmw.cbp: Fixed description of silk headband.

2007-07-11  Philipp Sehmisch  <tmw@crushnet.org>

	* src/resources/monsterdb.cpp, src/resources/monsterinfo.cpp,
	src/resources/monsterinfo.h, src/monster.cpp: Renamed SoundEvent
	to MonsterSoundEvent.
	* src/resources/equipmentdb.cpp, src/resources/equipmentinfo.cpp,
	src/resources/equipmentinfo.h: EquipmentDB now holds the type of
	attack animation and the sounds of weapons.
	* src/being.cpp. src/being.h, src/localplayer.cpp,
	src/net/beinghandler.cpp, src/net/charserverhandler.cpp,
	src/net/equipmenthandler.cpp, src/player.cpp, src/player.h: The
	type of weapon player characters are using is now set using
	setVisibleEquipment() instead of setWeapon() or setWeaponById().
	* src/CMakeLists.txt, src/Makefile.AM, tmw.cbp, The Mana World.dev:
	Updated project	files and buildscripts.
	* data/graphics/images/login-wallpaper.png: Replaced login wallpaper
	with a new one by Irukard.

2007-07-11  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/window.cpp: Fixed resizing windows by their resize grip.

2007-07-07  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/gui.cpp, src/gui/chatinput.h, src/gui/chatinput.cpp,